--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^7.4|^8.0",
         "guzzlehttp/guzzle": "^7.4",
-        "illuminate/contracts": "^9.0",
+        "illuminate/contracts": "^7.0|^8.0|^9.0",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
