--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,6 +26,8 @@ jobs:
         exclude:
           - laravel: 7.*
             php: 8.1
+          - laravel: 8.*
+            php: 8.1
           - laravel: 9.*
             php: 7.4
 
