--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "orchestra/testbench": "^5.0|^6.0|^7.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^8.0|^9.5",
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
