--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,7 +22,7 @@ jobs:
           - laravel: 8.*
             testbench: ^6.23
           - laravel: 7.*
-            testbench: 5.*
+            testbench: ^6.15
         exclude:
           - laravel: 7.*
             php: 8.1
