--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [self-hosted]
         php: [8.1, 8.0, 7.4]
         laravel: [9.*, 8.*, 7.*]
         stability: [prefer-lowest, prefer-stable]
