--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,6 +17,8 @@ jobs:
         laravel: [9.*, 8.*, 7.*]
         stability: [prefer-lowest, prefer-stable]
         include:
+          - laravel: 10.*
+            testbench: 7.*
           - laravel: 9.*
             testbench: 7.*
           - laravel: 8.*
@@ -30,6 +32,10 @@ jobs:
             php: 8.1
           - laravel: 9.*
             php: 7.4
+          - laravel: 10.*
+            php: 7.4
+          - laravel: 10.*
+            php: 8.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
