--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [self-hosted]
         php: [8.1, 8.0, 7.4]
-        laravel: [9.*, 8.*, 7.*]
+        laravel: [10.*, 9.*, 8.*, 7.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 10.*
